<resources>
	<string name="app_name">ADB &amp; Fastboot tools</string>
	<string name="adb">ADB</string>
	<string name="fastboot">Fastboot</string>
	<string name="fastboot_variables">All variables list</string>
	<string name="fastboot_partitions">Partitions info</string>
	<string name="clipboard_copied">Copied to clipboard</string>
	<string name="browse_file">Browse...</string>
	<string name="connect_device">Connect device</string>
	<string name="disconnect_all">Disconnect all</string>
	<string name="start_server">Start server</string>
	<string name="kill_server">Kill server</string>
	<string name="reconnect">Reconnect</string>
	<string name="install_app_from_file">Install app from file</string>
	<string name="install_app_from_list">Install app from list</string>
	<string name="tcpip">TCPIP</string>
	<string name="server">ADB server</string>
	<string name="apps">App control</string>
	<string name="device">Device</string>
	<string name="ip">Device IP</string>
	<string name="port">Device port</string>
	<string name="app_list">App list</string>
	<string name="app_loading">Loading applications...</string>
	<string name="permissions_loading">Loading permissions...</string>
	<string name="show_installed_apps">Show only installed apps</string>
	<string name="refresh_apps">Refresh</string>
	<string name="file_manager">File manager</string>
	<string name="app_manager">App manager</string>
	<string name="file_delete">Delete</string>
	<string name="file_rename">Rename</string>
	<string name="file_pull">Copy to /sdcard/ADB/</string>
	<string name="file_choose">Choose file</string>
	<string name="file_delete_confirm">Delete?</string>
	<string name="backup">Backup</string>
	<string name="backup_apk">Backup .apk</string>
	<string name="backup_user_apps">Backup user apps</string>
	<string name="backup_system_apps">Backup system apps</string>
	<string name="backup_data">Backup app data</string>
	<string name="backup_cache">Backup app cache</string>
	<string name="restore">Restore</string>
	<string name="poweroff">Poweroff</string>
	<string name="reboot">Reboot</string>
	<string name="reboot_system">System</string>
	<string name="reboot_recovery">Recovery</string>
	<string name="reboot_bootloader">Fastboot</string>
	<string name="reboot_sideload">Sideload</string>
	<string name="reboot_sideload_auto_reboot">Sideload (Auto reboot)</string>
	<string name="raw">raw</string>
	<string name="disable_verity">disable-verity</string>
	<string name="disable_verification">disable-verification</string>
	<string name="boot">Boot ROM</string>
	<string name="flasher">Flasher</string>
	<string name="flash">Flash</string>
	<string name="sending">Sending</string>
	<string name="writing">Writing</string>
	<string name="format">Format</string>
	<string name="partition">Partition</string>
	<string name="flashing">Bootloader unlocker</string>
	<string name="flashing_unlock">Unlock</string>
	<string name="flashing_lock">Lock</string>
	<string name="oem">OEM</string>
	<string name="oem_unlock">Unlock</string>
	<string name="oem_lock">Lock</string>
	<string name="oem_device_info">Bootloader info</string>
	<string name="oem_code">Input OEM code</string>
	<string name="getvar_all">All variables</string>
	<string name="app_uninstall_data">Uninstall with data</string>
	<string name="app_uninstall">Uninstall without data</string>
	<string name="app_install">Install</string>
	<string name="app_clear">Clear data</string>
	<string name="app_permissions">Set permissions</string>
	<string name="app_uninstalling">Uninstalling...</string>
	<string name="app_installing">Installing...</string>
	<string name="app_clearing">Clearing data...</string>
	<string name="app_permissions_applying">Applying permissions...</string>
	<string name="command_line">Command line</string>
	<string name="execute">Execute</string>
	<string name="sort_name">Sort by name</string>
	<string name="sort_type">Sort by type</string>
</resources>
