<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/device"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
				<Button
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:onClick="refreshDeviceList"
					android:text="@string/refresh_devices" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
				<Button
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:onClick="connectDevice"
                    android:layout_weight="1"
					android:text="@string/connect_device" />
				<Button
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:onClick="disconnectAll"
                    android:layout_weight="1"
					android:text="@string/disconnect_all" />
			</LinearLayout>
			<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:text="@string/server" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
				<Button
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:onClick="startServer"
                    android:layout_weight="1"
					android:text="@string/start_server" />
				<Button
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:onClick="killServer"
                    android:layout_weight="1"
					android:text="@string/kill_server" />
				<Button
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:onClick="reconnect"
                    android:layout_weight="1"
					android:text="@string/reconnect" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/controls"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/device" />
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<Button
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:onClick="reboot"
						android:layout_weight="1"
						android:text="@string/reboot" />
					<Button
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:onClick="tcpip"
						android:layout_weight="1"
						android:text="@string/tcpip" />
				</LinearLayout>
				<Button
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:onClick="fileManager"
					android:text="@string/file_manager" />
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/apps" />
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<Button
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:onClick="installAppFromFile"
						android:layout_weight="1"
						android:text="@string/install_app_from_file" />
					<Button
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:onClick="installAppFromList"
						android:layout_weight="1"
						android:text="@string/install_app_from_list" />
				</LinearLayout>
				<Button
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:onClick="appManager"
					android:text="@string/app_manager" />
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<Button
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:onClick="backup"
						android:layout_weight="1"
						android:text="@string/backup" />
					<Button
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:onClick="restore"
						android:layout_weight="1"
						android:text="@string/restore" />
				</LinearLayout>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/command_line" />
				<LinearLayout
					android:focusable="true"
					android:focusableInTouchMode="true"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<EditText
						android:id="@+id/command"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="1" />
					<Button
						android:text="@string/execute"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:onClick="executeCommand"
						android:layout_weight="0" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="200dp"
		android:scrollbars="vertical"
		android:padding="5dp"
		android:fillViewport="true">

		<TextView
			android:padding="5dp"
			android:id="@+id/log"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:textIsSelectable="true"
			android:background="@android:color/black"
			android:textColor="@android:color/white"/>
	</ScrollView>
</LinearLayout>
