<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
	<Switch
		android:id="@+id/backup_apk"
		android:checked="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/backup_apk" />
	<Switch
		android:id="@+id/backup_user_apps"
		android:checked="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/backup_user_apps" />
	<Switch
		android:id="@+id/backup_system_apps"
		android:checked="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/backup_system_apps" />
	<Switch
		android:id="@+id/backup_data"
		android:checked="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/backup_data" />
	<Switch
		android:id="@+id/backup_cache"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/backup_cache" />
</LinearLayout>
